--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -135,6 +135,11 @@ input[type='checkbox'] {
   span { font-size: 1em; }
 }
 
+.block-right {
+  display: block;
+  text-align: right;
+}
+
 // 検索窓
 .input-group {
   display: inline-table;
@@ -376,11 +381,8 @@ aside {
     width: 50px;
     height: 50px;
     object-fit: cover;
-  }
-  .gravatar {
     float: left;
     margin-right: 10px;
-    border-radius: 50%;
     position: absolute;
     top: 0;
     left: 0;
