--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,6 +3,7 @@
 <% provide(:title, "Edit user") %>
 
 <h1>Update your profile</h1>
+<%= link_to "view my profile", @user, class: "block-right" %>
 
 <%= form_with(model: @user, local: true) do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
