--- a/app/views/comments/_comment_form.html.erb
+++ b/app/views/comments/_comment_form.html.erb
@@ -10,8 +10,16 @@
   <% else %>
     <div><%= hidden_field_tag :userprofile_id, current_user.id, { id: SecureRandom.hex(4) } %></div>
   <% end %>
-  <div class="field">
-    <%= f.text_area :content, placeholder: "#{@feedmicropost.user.name}さん の投稿にコメントする" %>
+
+
+  <div class="response_text_wrap">
+    <div class="input-group">
+      <%= f.text_area :content, placeholder: "#{@feedmicropost.user.name}さん の投稿にコメントする" %>
+      <span class="input-group-btn">
+        <%= button_tag type: "submit", class: 'btn btn-send' do %>
+          <i class="fa-regular fa-paper-plane"></i>
+        <% end %>
+      </span>
+    </div>
   </div>
-  <%= f.submit "Post", class: "btn btn-primary" %>
 <% end %>
