--- a/app/views/comments/_reply_form.html.erb
+++ b/app/views/comments/_reply_form.html.erb
@@ -18,7 +18,7 @@
     
     <div class="response_text_wrap">
       <div class="input-group">
-        <%= f.text_area :content, placeholder: "リプライする（リプライしたいコメントの Replyボタン を押してメンションしよう）" %>
+        <%= f.text_area :content, placeholder: "リプライする（リプライしたい人のコメントの Replyボタン を押してメンションしよう）" %>
         <span class="input-group-btn">
           <%= button_tag type: "submit", class: 'btn btn-send' do %>
             <i class="fa-regular fa-paper-plane"></i>
