--- a/app/views/microposts/_micropost_form.html.erb
+++ b/app/views/microposts/_micropost_form.html.erb
@@ -15,7 +15,7 @@
     </div>
 
     <div class="publishing inline-block">
-      <%= f.select :publishing, {"公開": "public", "非公開": "Private"}, { selected: "public" }, class: "form-control" %>
+      <%= f.select :publishing, {"公開": "public", "非公開": "private"}, { selected: "public" }, class: "form-control" %>
     </div>
   </div>
 
