--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -76,6 +76,9 @@
 
     <span class="timestamp">
       Posted <%= time_ago_in_words(micropost.created_at) %> ago.
+      <% if micropost.publishing === "private" %>
+        <i class="fas fa-lock"></i>
+      <% end %>
       <% if current_user?(micropost.user) %>
         <%= link_to "delete", micropost, method: :delete,
                                          data: { confirm: "You sure?" } %>
