add educational_material check_box

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1242,6 +1242,9 @@ span.image {
     box-shadow: none;
     line-height: 170%;
   }
+  .check_box {
+    margin: 8px 8px 0 0;
+  }
   .tag_search_wrap {
     .input-group {
       width: 100%;
