--- a/app/views/microposts/_micropost_form.html.erb
+++ b/app/views/microposts/_micropost_form.html.erb
@@ -9,7 +9,7 @@
   <div class="micropost_attr pull-right">
     <div class="check_box inline-block">
       <%= f.label :educational_material do %>
-        <%= f.check_box :educational_material, class: 'inline-block' %>
+        <%= f.check_box :educational_material, {}, true, false %>
         <span>教材・記事</span>
       <% end %>
     </div>
