add to_boolean method in openclass

--- a/app/views/microposts/_tag_search_form.html.erb
+++ b/app/views/microposts/_tag_search_form.html.erb
@@ -22,7 +22,7 @@
   <% end %>
   <div class="check_box inline-block pull-right">
     <%= f.label :educational_material do %>
-      <%= f.check_box :educational_material %>
+      <%= f.check_box :educational_material, {}, true, false %>
       <span>教材・記事</span>
     <% end %>
   </div>
