adjust grean color

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -918,7 +918,7 @@ span.image {
 }
 
 .like-btn {
-  color: #1ABC9C;
+  color: #00B564;
 }
 
 .like-btn-unlike {
@@ -932,7 +932,7 @@ span.image {
 .porcs {
   margin-left: 8px;
   .btn-porc {
-    color: #1ABC9C;
+    color: #00B564;
   }
   .btn-porc-unporc {
     color: #95A5A6;
@@ -1118,8 +1118,7 @@ span.image {
         font-size: 20px;
         width: 48px;
         position: absolute;
-        right: 16px;
-        bottom: px;
+        right: 16.5px;
         padding: 1px 0;
       }
       .image {
