--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -83,6 +83,8 @@
         <i class="fas fa-lock"></i>
       <% end %>
       <% if current_user?(micropost.user) %>
+        <%= link_to "edit", edit_micropost_path(micropost), remote: true %>
+        <span class="micropost-edit-modal-<%= micropost.id %>"></span>
         <%= link_to "delete", micropost, method: :delete,
                                          data: { confirm: "You sure?" } %>
       <% end %>
