--- a/app/views/slides/remove.js.erb
+++ b/app/views/slides/remove.js.erb
@@ -1,3 +1,3 @@
 $("#micropost_file_type").val("")
 $("#micropost_file_link").val("")
-$(".slide_post .file_type").html("")
+$(".slide_post .file_link_exist").html("")
